php.net |  support |  documentation |  report a bug |  advanced search |  search howto |  statistics |  random bug |  login
Bug #61617 Libxml tests failed(ht is already destroyed)
Submitted: 2012-04-04 05:18 UTC Modified: 2012-04-04 12:27 UTC
From: laruence@php.net Assigned: laruence (profile)
Status: Closed Package: *XML functions
PHP Version: 5.4.0 OS:
Private report: No CVE-ID: None
 [2012-04-04 05:18 UTC] laruence@php.net
Description:
------------
Two tests faild in php debug mode.

libxml_set_streams_context() [ext/libxml/tests/004.phpt]
Bug #54440: libxml extension ignores default 
context[ext/libxml/tests/bug54440.phpt]

Test script:
---------------
libxml_set_streams_context() [ext/libxml/tests/004.phpt]
Bug #54440: libxml extension ignores default context[ext/libxml/tests/bug54440.phpt]

Expected result:
----------------
pass

Actual result:
--------------
ht=0x1183710 is already destroyed

Patches

Pull Requests

History

AllCommentsChangesGit/SVN commitsRelated reports
 [2012-04-04 09:23 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=94f1c05ff8f83b2130de21683c5c2bd3af7e065c
Log: Fixed bug #61617 (Libxml tests failed(ht is already destroyed))
 [2012-04-04 09:37 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=94f1c05ff8f83b2130de21683c5c2bd3af7e065c
Log: Fixed bug #61617 (Libxml tests failed(ht is already destroyed))
 [2012-04-04 09:38 UTC] laruence@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src.git;a=commit;h=94f1c05ff8f83b2130de21683c5c2bd3af7e065c
Log: Fixed bug #61617 (Libxml tests failed(ht is already destroyed))
 [2012-04-04 12:27 UTC] laruence@php.net
This bug has been fixed in SVN.

Snapshots of the sources are packaged every three hours; this change
will be in the next snapshot. You can grab the snapshot at
http://snaps.php.net/.

 For Windows:

http://windows.php.net/snapshots/
 
Thank you for the report, and for helping us make PHP better.


 [2012-04-04 12:27 UTC] laruence@php.net
-Status: Open +Status: Closed -Assigned To: +Assigned To: laruence
 [2014-10-07 23:27 UTC] stas@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=94f1c05ff8f83b2130de21683c5c2bd3af7e065c
Log: Fixed bug #61617 (Libxml tests failed(ht is already destroyed))
 [2014-10-07 23:38 UTC] stas@php.net
Automatic comment on behalf of laruence
Revision: http://git.php.net/?p=php-src-security.git;a=commit;h=94f1c05ff8f83b2130de21683c5c2bd3af7e065c
Log: Fixed bug #61617 (Libxml tests failed(ht is already destroyed))
 
PHP Copyright © 2001-2026 The PHP Group
All rights reserved.
Last updated: Tue Sep 15 06:00:02 2026 UTC