Fixed bug #61617 (Libxml tests failed(ht is already destroyed))